--- a/posts.html
+++ b/posts.html
@@ -6,7 +6,7 @@ layout: page
 {% for post in site.posts %}
     {% if post.hidden != "true" %}
         <h2 class="h3">
-            <a href="{{ post.url | absolute_url }}">{{ post.title }}</a>
+            <a href="{{ post.url }}">{{ post.title }}</a>
             <small class="text-muted">{{ post.date | date: "%e.%m.%y" }}</small>                    
         </h2>
     {% endif %}
