--- a/posts.html
+++ b/posts.html
@@ -5,9 +5,11 @@ layout: page
 ---
 {% for post in site.posts %}
     {% if post.hidden != "true" %}
+        {% if post.categories contains "English" or post.categories contains "Norsk" %}
         <h2 class="h3">
             <a href="{{ post.url }}">{{ post.title }}</a>
             <small class="text-muted">{{ post.date | date: "%e.%m.%y" }}</small>                    
         </h2>
+        {% endif %}
     {% endif %}
 {% endfor %}
